--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   toast: ^0.1.5
   jwt_decoder: ^1.0.1
   flutter_svg: ^0.19.0
+  json_serializable: ^3.5.0
+  build_runner: ^1.9.0
 
 dev_dependencies:
   flutter_test:
