--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_svg: ^0.19.0
   json_serializable: ^3.5.0
   build_runner: ^1.9.0
+  device_info: ^0.4.2+8
 
 dev_dependencies:
   flutter_test:
